2013-05-07  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/stdlib/__atexit.c (__atexit_lock): Declare.
	* libc/stdlib/__call_atexit.c (__atexit_lock): Define.

2013-05-06  Sandra Loosemore  <sandra@codesourcery.com>

	* configure.host (machine_dir, sys_dir, syscall_dir, newlib_cflags):
	Add settings for nios2*.
	* libc/include/machine/ieeefp.h (IEEE_BIG_ENDIAN, IEEE_LITTLE_ENDIAN):
	Likewise.
	* libc/include/machine/setjmp.h (JBLEN, JBTYPE): Likewise.
	* libc/machine/configure.in: Add nios2 subdir.
	* libc/machine/configure: Regenerated.
	* libc/machine/nios2/Makefile.am: New.
	* libc/machine/nios2/Makefile.in: New (autogenerated).
	* libc/machine/nios2/aclocal.m4: New (copied from mips version).
	* libc/machine/nios2/configure.in: New.
	* libc/machine/nios2/configure: New (autogenerated).
	* libc/machine/nios2/setjmp.s: New.

2013-04-29  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/stdio/local.h (CHECK_INIT): Evaluate argument only once.
	(CHECK_STD_INIT): Likewise.
	* libc/stdio/fgetc.c (fgetc): Use local variable for _REENT.
	* libc/stdio/fgetwc.c (fwgetc): Likewise.
	* libc/stdio/fgetws.c (fgetws): Likewise.
	* libc/stdio/fputc.c (fputc): Likewise.
	* libc/stdio/fputwc.c (fputwc): Likewise.
	* libc/stdio/fputws.c (fputws): Likewise.
	* libc/stdio/getc.c (getc): Likewise.
	* libc/stdio/getchar.c (_getchar_r): Likewise.
	* libc/stdio/putc.c (putc): Likewise.
	* libc/stdio/putchar.c (putchar): Likewise.
	* libc/stdio/scanf.c (scanf): Likewise.
	* libc/stdio/setvbuf.c (setvbuf): Likewise.
	* libc/stdio/ungetwc.c (ungetwc): Likewise.
	* libc/stdio/vfscanf.c (VFSCANF): Likewise.
	* libc/stdio/vfwscanf.c (VFWSCANF): Likewise.
	* libc/stdio/viprintf.c (viprintf): Likewise.
	* libc/stdio/viscanf.c (viscanf): Likewise.
	* libc/stdio/vprintf.c (vprintf): Likewise.
	* libc/stdio/vscanf.c (vscanf): Likewise.
	* libc/stdio/vwprintf.c (vwprintf): Likewise.
	* libc/stdio/vwscanf.c (vwscanf): Likewise.
	* libc/stdio/wscanf.c (wscanf): Likewise.